@@ -4,19 +4,19 @@
 
 CDSS Time Series Processor Java Library
 CDSS Time Series Processor Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Time Series Processor Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
+CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Time Series Processor Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
@@ -526,14 +526,14 @@ CommandWarningException, CommandException
 	String Statistic = parameters.getValue ( "Statistic" );
 	TSStatisticType statisticType = TSStatisticType.valueOfIgnoreCase(Statistic);
 	String AllowMissingCount = parameters.getValue ( "AllowMissingCount" );
-	Integer AllowMissingCount_Integer = new Integer(-1); // Default
+	Integer AllowMissingCount_Integer = Integer.valueOf(-1); // Default
 	if ( StringUtil.isInteger(AllowMissingCount) ) {
-	    AllowMissingCount_Integer = new Integer(AllowMissingCount);
+	    AllowMissingCount_Integer = Integer.valueOf(AllowMissingCount);
 	}
 	Integer MinimumSampleSize_Integer = null; // Default - no minimum
 	String MinimumSampleSize = parameters.getValue ( "MinimumSampleSize" );
     if ( StringUtil.isInteger(MinimumSampleSize) ) {
-        MinimumSampleSize_Integer = new Integer(MinimumSampleSize);
+        MinimumSampleSize_Integer = Integer.valueOf(MinimumSampleSize);
     }
 	String AnalysisStart = parameters.getValue ( "AnalysisStart" );
 	String AnalysisEnd = parameters.getValue ( "AnalysisEnd" );
