@@ -4,19 +4,19 @@
 
 CDSS Time Series Processor Java Library
 CDSS Time Series Processor Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Time Series Processor Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
+CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Time Series Processor Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
@@ -500,7 +500,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
 	PropList parameters = getCommandParameters ();
 	CommandProcessor processor = getCommandProcessor();
 	CommandStatus status = getCommandStatus();
-    Boolean clearStatus = new Boolean(true); // default
+    Boolean clearStatus = Boolean.TRUE; // Default.
     try {
     	Object o = processor.getPropContents("CommandsShouldClearRunStatus");
     	if ( o != null ) {
@@ -526,17 +526,17 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
 	String Value1 = parameters.getValue ( "Value1" );
     Double value1 = null;
     if ( (Value1 != null) && !Value1.isEmpty() ) {
-        value1 = new Double(Value1);
+        value1 = Double.valueOf(Value1);
     }
     String AllowMissingCount = parameters.getValue ( "AllowMissingCount" );
     Integer AllowMissingCount_Integer = null;
     if ( (AllowMissingCount != null) && StringUtil.isInteger(AllowMissingCount) ) {
-        AllowMissingCount_Integer = new Integer(AllowMissingCount);
+        AllowMissingCount_Integer = Integer.valueOf(AllowMissingCount);
     }
     String MinimumSampleSize = parameters.getValue ( "MinimumSampleSize" );
     Integer MinimumSampleSize_Integer = null;
     if ( (MinimumSampleSize != null) && StringUtil.isInteger(MinimumSampleSize) ) {
-        MinimumSampleSize_Integer = new Integer(MinimumSampleSize);
+        MinimumSampleSize_Integer = Integer.valueOf(MinimumSampleSize);
     }
 	String AnalysisStart = parameters.getValue ( "AnalysisStart" ); // Default will be TS period
 	String AnalysisEnd = parameters.getValue ( "AnalysisEnd" ); // Default will be TS period
