@@ -4,7 +4,7 @@
 
 CDSS Time Series Processor Java Library
 CDSS Time Series Processor Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2024 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Time Series Processor Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -547,10 +547,10 @@ protected Object [] createTableColumns ( DataTable table, Workbook wb, Sheet she
                 		// Assume column headings are integers.
                         // Double to integer - use an offset to help make sure integer value is correct.
                         if ( cellValueDouble >= 0.0 ) {
-                        	columnNames[columnIndex] = "" + new Integer((int)(cellValueDouble + .0001));
+                        	columnNames[columnIndex] = "" + Integer.valueOf((int)(cellValueDouble + .0001));
                         }
                         else {
-                        	columnNames[columnIndex] = "" + new Integer((int)(cellValueDouble - .0001));
+                        	columnNames[columnIndex] = "" + Integer.valueOf((int)(cellValueDouble - .0001));
                         }
                 	}
                 	else {
@@ -717,7 +717,7 @@ protected Object [] createTableColumns ( DataTable table, Workbook wb, Sheet she
     }
     Object [] o = new Object[2];
     o[0] = columnNames;
-    o[1] = new Integer(firstDataRow);
+    o[1] = Integer.valueOf(firstDataRow);
     return o;
 }
 
@@ -1163,10 +1163,10 @@ throws FileNotFoundException, IOException {
                     Message.printStatus(2, routine, "Cell string value=\"" + cellValueString + "\"" );
                     if ( isBoolean ) {
                     	if ( cellValueString.equals("1") || cellValueString.equalsIgnoreCase("Yes") || cellValueString.equalsIgnoreCase("True") ) {
-                    		map.put(propertyName, new Boolean(true));
+                    		map.put(propertyName, Boolean.TRUE);
                     	}
                     	else {
-                    		map.put(propertyName, new Boolean(false));
+                    		map.put(propertyName, Boolean.FALSE);
                     	}
                     }
                     else if ( isDateTime ) {
@@ -1221,7 +1221,7 @@ throws FileNotFoundException, IOException {
                         }
                         Message.printStatus(2, routine, "Cell numeric value=" + cellValueDouble );
                         if ( isInteger ) {
-                        	map.put(propertyName,new Integer((int)cellValueDouble));
+                        	map.put(propertyName,Integer.valueOf((int)cellValueDouble));
                         }
                         else if ( isBoolean ) {
                         	int i = (int)cellValueDouble;
@@ -1229,7 +1229,7 @@ throws FileNotFoundException, IOException {
                         	if ( i != 0 ) {
                         		b = true;
                         	}
-                        	map.put(propertyName,new Boolean(b));
+                        	map.put(propertyName,Boolean.valueOf(b));
                         }
                         else {
                         	// Default is double.
@@ -1247,10 +1247,10 @@ throws FileNotFoundException, IOException {
                     Message.printStatus(2, routine, "Cell boolean value=" + cellValueBoolean );
                     if ( isInteger ) {
                     	if ( cellValueBoolean ) {
-                    		map.put(propertyName,new Integer(1));
+                    		map.put(propertyName,Integer.valueOf(1));
                     	}
                     	else {
-                    		map.put(propertyName,new Integer(0));
+                    		map.put(propertyName,Integer.valueOf(0));
                     	}
                     }
                     map.put(propertyName,cellValueBoolean);
@@ -1634,7 +1634,7 @@ throws FileNotFoundException, IOException {
                     else if ( tableColumnTypes[ikey] == TableField.DATA_TYPE_DOUBLE ) {
                         // Parse to the double.
                         try {
-                            table.setFieldValue(iRowOut, iColOut, new Double(cellValueString), true);
+                            table.setFieldValue(iRowOut, iColOut, Double.valueOf(cellValueString), true);
                         }
                         catch ( NumberFormatException e ) {
                             // Set to NaN.
@@ -1644,7 +1644,7 @@ throws FileNotFoundException, IOException {
                     else if ( tableColumnTypes[ikey] == TableField.DATA_TYPE_INT ) {
                         // Parse to the boolean.
                         if ( cellValueString.equalsIgnoreCase("True") || cellValueString.equals("1") ) {
-                            table.setFieldValue(iRowOut, iColOut, new Integer(1), true);
+                            table.setFieldValue(iRowOut, iColOut, Integer.valueOf(1), true);
                         }
                         else {
                             // Set to null.
@@ -1722,7 +1722,7 @@ throws FileNotFoundException, IOException {
                         Message.printStatus(2, routine, "Cell numeric value=" + cellValueDouble );
                         if ( tableColumnTypes[ikey] == TableField.DATA_TYPE_DOUBLE ) {
                             // Double to double.
-                            table.setFieldValue(iRowOut, iColOut, new Double(cellValueDouble), true);
+                            table.setFieldValue(iRowOut, iColOut, Double.valueOf(cellValueDouble), true);
                         }
                         else if ( tableColumnTypes[ikey] == TableField.DATA_TYPE_STRING ) {
                             // Double to string.
@@ -1731,10 +1731,10 @@ throws FileNotFoundException, IOException {
                         else if ( tableColumnTypes[ikey] == TableField.DATA_TYPE_INT ) {
                             // Double to integer - use an offset to help make sure integer value is correct.
                             if ( cellValueDouble >= 0.0 ) {
-                                table.setFieldValue(iRowOut, iColOut, new Integer((int)(cellValueDouble + .0001)), true);
+                                table.setFieldValue(iRowOut, iColOut, Integer.valueOf((int)(cellValueDouble + .0001)), true);
                             }
                             else {
-                                table.setFieldValue(iRowOut, iColOut, new Integer((int)(cellValueDouble - .0001)), true);
+                                table.setFieldValue(iRowOut, iColOut, Integer.valueOf((int)(cellValueDouble - .0001)), true);
                             }
                         }
                         else {
@@ -1759,10 +1759,10 @@ throws FileNotFoundException, IOException {
                     }
                     else if ( tableColumnTypes[ikey] == TableField.DATA_TYPE_DOUBLE ) {
                         if ( cellValueBoolean ) {
-                            table.setFieldValue(iRowOut, iColOut, new Double(1.0), true);
+                            table.setFieldValue(iRowOut, iColOut, Double.valueOf(1.0), true);
                         }
                         else {
-                            table.setFieldValue(iRowOut, iColOut, new Double(0.0), true);
+                            table.setFieldValue(iRowOut, iColOut, Double.valueOf(0.0), true);
                         }
                     }
                     else {
@@ -1913,7 +1913,7 @@ public boolean rowShouldBeIncluded ( Row row, int iRow, int colStart, int colEnd
                 else if ( tableColumnTypes[iColOut] == TableField.DATA_TYPE_DOUBLE ) {
                     // Parse to the double.
                     try {
-                        table.setFieldValue(iRowOut, iColOut, new Double(cellValueString), true);
+                        table.setFieldValue(iRowOut, iColOut, Double.valueOf(cellValueString), true);
                     }
                     catch ( NumberFormatException e ) {
                         // Set to NaN.
@@ -2000,7 +2000,7 @@ public boolean rowShouldBeIncluded ( Row row, int iRow, int colStart, int colEnd
                     cellValueObject = cellValueDouble; // For try/catch
                     if ( tableColumnTypes[iColOut] == TableField.DATA_TYPE_DOUBLE ) {
                         // Double to double.
-                        // Eval and set table.setFieldValue(iRowOut, iColOut, new Double(cellValueDouble), true);
+                        // Eval and set table.setFieldValue(iRowOut, iColOut, Double.valueOf(cellValueDouble), true);
                     }
                     else if ( tableColumnTypes[iColOut] == TableField.DATA_TYPE_STRING ) {
                         // Double to string - have to format number because Java will use exponential notation.
@@ -2037,10 +2037,10 @@ public boolean rowShouldBeIncluded ( Row row, int iRow, int colStart, int colEnd
                 }
                 else if ( tableColumnTypes[iColOut] == TableField.DATA_TYPE_DOUBLE ) {
                     if ( cellValueBoolean ) {
-                        table.setFieldValue(iRowOut, iColOut, new Double(1.0), true);
+                        table.setFieldValue(iRowOut, iColOut, Double.valueOf(1.0), true);
                     }
                     else {
-                        table.setFieldValue(iRowOut, iColOut, new Double(0.0), true);
+                        table.setFieldValue(iRowOut, iColOut, Double.valueOf(0.0), true);
                     }
                 }
                 else {
