@@ -4,19 +4,19 @@
 
 CDSS Time Series Processor Java Library
 CDSS Time Series Processor Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Time Series Processor Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
+CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Time Series Processor Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
@@ -78,7 +78,6 @@ import RTi.Util.IO.PropList;
 import RTi.Util.IO.IOUtil;
 import RTi.Util.String.StringUtil;
 import RTi.Util.Table.DataTable;
-import RTi.Util.Table.TableRecord;
 import RTi.Util.Time.DateTime;
 import RTi.Util.Time.DateTimeFormatterType;
 import RTi.Util.Time.DateTimeRange;
@@ -399,7 +398,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
 	CommandProcessor processor = getCommandProcessor();
     CommandStatus status = getCommandStatus();
     CommandPhaseType commandPhase = CommandPhaseType.RUN;
-    Boolean clearStatus = new Boolean(true); // default
+    Boolean clearStatus = Boolean.TRUE; // Default.
     try {
     	Object o = processor.getPropContents("CommandsShouldClearRunStatus");
     	if ( o != null ) {
@@ -710,7 +709,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
         if ( (BlockMinColumnProperty != null) && !BlockMinColumnProperty.equals("") ) {
             request_params = new PropList ( "" );
             request_params.setUsingObject ( "PropertyName", BlockMinColumnProperty );
-            request_params.setUsingObject ( "PropertyValue", new Integer(this.blockMinColumn) );
+            request_params.setUsingObject ( "PropertyValue", Integer.valueOf(this.blockMinColumn) );
             try {
                 processor.processRequest( "SetProperty", request_params);
             }
@@ -727,7 +726,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
         if ( (BlockMinRowProperty != null) && !BlockMinRowProperty.equals("") ) {
             request_params = new PropList ( "" );
             request_params.setUsingObject ( "PropertyName", BlockMinRowProperty );
-            request_params.setUsingObject ( "PropertyValue", new Integer(this.blockMinRow) );
+            request_params.setUsingObject ( "PropertyValue", Integer.valueOf(this.blockMinRow) );
             try {
                 processor.processRequest( "SetProperty", request_params);
             }
@@ -744,7 +743,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
         if ( (BlockMaxColumnProperty != null) && !BlockMaxColumnProperty.equals("") ) {
             request_params = new PropList ( "" );
             request_params.setUsingObject ( "PropertyName", BlockMaxColumnProperty );
-            request_params.setUsingObject ( "PropertyValue", new Integer(this.blockMaxColumn) );
+            request_params.setUsingObject ( "PropertyValue", Integer.valueOf(this.blockMaxColumn) );
             try {
                 processor.processRequest( "SetProperty", request_params);
             }
@@ -761,7 +760,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
         if ( (BlockMaxRowProperty != null) && !BlockMaxRowProperty.equals("") ) {
             request_params = new PropList ( "" );
             request_params.setUsingObject ( "PropertyName", BlockMaxRowProperty );
-            request_params.setUsingObject ( "PropertyValue", new Integer(this.blockMaxRow) );
+            request_params.setUsingObject ( "PropertyValue", Integer.valueOf(this.blockMaxRow) );
             try {
                 processor.processRequest( "SetProperty", request_params);
             }
@@ -1066,13 +1065,14 @@ throws FileNotFoundException, IOException
                 }
             }
         }
-        // Get the contiguous block of data to process by evaluating user input
+        // Get the contiguous block of data to process by evaluating user input.
         AreaReference area = tk.getAreaReference ( wb, sheet, excelAddress, excelNamedRange, excelTableName );
-        int rowOutStart = 0, colOutStart = 0; // Position of upper-left start of output
+        int rowOutStart = 0, colOutStart = 0; // Position of upper-left start of output.
         if ( area == null ) {
             problems.add ( "Unable to get worksheet area reference from address information (empty worksheet?)." );
-            colOutStart = area.getFirstCell().getCol();
-            rowOutStart = area.getFirstCell().getRow();
+            // TODO smalers 2025-03-21 need to fix.  What is this trying to do?
+            //colOutStart = area.getFirstCell().getCol();
+            //rowOutStart = area.getFirstCell().getRow();
         }
         else {
         	Message.printStatus(2,routine,"Excel address block to write: " + area);
@@ -1108,7 +1108,7 @@ throws FileNotFoundException, IOException
             	}
             }
         }
-        String missingValueString = "";
+        //String missingValueString = "";
         // Create a DateTimeFormatter to format the data values
         if ( dateTimeFormatterType == null ) {
             dateTimeFormatterType = DateTimeFormatterType.C;
@@ -1129,18 +1129,19 @@ throws FileNotFoundException, IOException
             }
         }
         int intervalBase = -1;
-        int intervalMult = -1;
+        // TODO smalers 2025-03-21 clean up unused values.
+        //int intervalMult = -1;
         String [] missingValueStrings = new String[tslist.size()];
-        boolean missingValueBlank = false;
+        //boolean missingValueBlank = false;
         if ( (missingValue != null) && missingValue.equalsIgnoreCase("Blank") ) {
         	// Use a blank cell
-        	missingValueBlank = true;
+        	//missingValueBlank = true;
         }
         int its = -1;
         int blockMinColumn = Integer.MAX_VALUE;
-        int blockMinRow = Integer.MAX_VALUE;
+        //int blockMinRow = Integer.MAX_VALUE;
         int blockMaxColumn = Integer.MIN_VALUE;
-        int blockMaxRow = Integer.MIN_VALUE;
+        //int blockMaxRow = Integer.MIN_VALUE;
         for ( TS ts : tslist ) {
             ++its;
             if ( its == 1 ) {
@@ -1149,7 +1150,7 @@ throws FileNotFoundException, IOException
             }
             if ( ts != null ) {
                 intervalBase = ts.getDataIntervalBase();
-                intervalMult = ts.getDataIntervalMult();
+                //intervalMult = ts.getDataIntervalMult();
             }
             // Missing value can be output as a string so check
             if ( (missingValue == null) || missingValue.equals("") ) {
@@ -1209,9 +1210,9 @@ throws FileNotFoundException, IOException
         // Set the cell formats for output (will be used for the data rows).
         // All formats for the column headings are text.
         DataFormat [] cellFormats = new DataFormat[cols];
-        DataFormat cellFormatHeader = wb.createDataFormat();
+        //DataFormat cellFormatHeader = wb.createDataFormat();
         CellStyle [] cellStyles = new CellStyle[cols];
-        CellStyle cellStyleHeader = wb.createCellStyle();
+        //CellStyle cellStyleHeader = wb.createCellStyle();
         // Initialize styles corresponding to styleTable, newer approach to styling.
         // The styles in this table will be used by default with the above setting style information to the below.
         TimeSeriesConditionAndStyleManager styleManager = null;
@@ -1219,7 +1220,7 @@ throws FileNotFoundException, IOException
         	styleManager = new TimeSeriesConditionAndStyleManager(tslist,conditionTable,styleTable,wb);
         }
         int [] cellTypes = new int[cols];
-        int cellTypeHeader = Cell.CELL_TYPE_STRING;
+        //int cellTypeHeader = Cell.CELL_TYPE_STRING;
         int col = 0;
         // TODO SAM 2015-02-17 Need to figure out how to store date/time in numeric - for now format a string
         List<String> columnNames = new ArrayList<String>();
@@ -1285,6 +1286,7 @@ throws FileNotFoundException, IOException
         		styleManager, legendWorksheet, legendAddress,
         		problems );
         }
+        	/* TODO smalers 2025-03-21 need to remove.
         if ( 1 == 2 ) {
         // Loop through date/time corresponding to each row in the output file
         double value;
@@ -1412,6 +1414,7 @@ throws FileNotFoundException, IOException
             }
         }
         }
+        */
     }
     catch ( Exception e ) {
         problems.add ( "Error writing to workbook \"" + workbookFile + "\" (" + e + ")." );
