@@ -4,19 +4,19 @@
 
 CDSS Time Series Processor Java Library
 CDSS Time Series Processor Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2022 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Time Series Processor Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
+CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Time Series Processor Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
@@ -346,7 +346,7 @@ throws InvalidCommandParameterException
                 CommandStatusType.FAILURE, message, "Specify the allowed missing count as an interger."));
 	    }
 	    else {
-	        allowMissingCount = new Integer(AllowMissingCount);
+	        allowMissingCount = Integer.valueOf(AllowMissingCount);
 	    }
 	}
 	
@@ -361,7 +361,7 @@ throws InvalidCommandParameterException
                 CommandStatusType.FAILURE, message, "Specify the allowed missing consecutive value as an interger."));
         }
         else {
-            allowMissingConsecutive = new Integer(AllowMissingConsecutive);
+            allowMissingConsecutive = Integer.valueOf(AllowMissingConsecutive);
         }
     }
     
@@ -735,7 +735,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
     
     CommandStatus status = getCommandStatus();
     TSCommandProcessor processor = (TSCommandProcessor)getCommandProcessor();
-    Boolean clearStatus = new Boolean(true); // Default.
+    Boolean clearStatus = Boolean.TRUE; // Default.
     try {
     	Object o = processor.getPropContents("CommandsShouldClearRunStatus");
     	if ( o != null ) {
@@ -813,7 +813,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
 	String AllowMissingCount = parameters.getValue("AllowMissingCount" );
 	Integer allowMissingCount = null;
 	if ( StringUtil.isInteger(AllowMissingCount) ) {
-	    allowMissingCount = new Integer(AllowMissingCount);
+	    allowMissingCount = Integer.valueOf(AllowMissingCount);
 	}
 	/* TODO SAM 2005-02-18 may enable later.
 	String	AllowMissingPercent= _parameters.getValue("AllowMissingPercent");
@@ -821,7 +821,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
     String AllowMissingConsecutive = parameters.getValue("AllowMissingConsecutive" );
     Integer allowMissingConsecutive = null;
     if ( StringUtil.isInteger(AllowMissingConsecutive) ) {
-        allowMissingConsecutive = new Integer(AllowMissingConsecutive);
+        allowMissingConsecutive = Integer.valueOf(AllowMissingConsecutive);
     }
 	String OutputFillMethod = parameters.getValue( "OutputFillMethod" );
 	TSUtil_ChangeInterval_OutputFillMethodType outputFillMethod = null;
