@@ -1,3 +1,26 @@
+// FillConstant_Command - this class initializes, checks, and runs the FillConstant() command.
+
+/* NoticeStart
+
+CDSS Time Series Processor Java Library
+CDSS Time Series Processor Java Library is a part of Colorado's Decision Support Systems (CDSS)
+Copyright (C) 1994-2019 Colorado Department of Natural Resources
+
+CDSS Time Series Processor Java Library is free software:  you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+    along with CDSS Time Series Processor Java Library.  If not, see <https://www.gnu.org/licenses/>.
+
+NoticeEnd */
+
 package rti.tscommandprocessor.commands.ts;
 
 import javax.swing.JFrame;
@@ -261,7 +284,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
     
     CommandStatus status = getCommandStatus();
 	CommandPhaseType commandPhase = CommandPhaseType.RUN;
-    Boolean clearStatus = new Boolean(true); // default
+    Boolean clearStatus = Boolean.TRUE; // Default.
     try {
     	Object o = processor.getPropContents("CommandsShouldClearRunStatus");
     	if ( o != null ) {
@@ -438,7 +461,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
 	for ( int its = 0; its < nts; its++ ) {
 		ts = null;
 		request_params = new PropList ( "" );
-		request_params.setUsingObject ( "Index", new Integer(tspos[its]) );
+		request_params.setUsingObject ( "Index", Integer.valueOf(tspos[its]) );
 		bean = null;
 		try { bean =
 			processor.processRequest( "GetTimeSeries", request_params);
