@@ -4,19 +4,19 @@
 
 CDSS Time Series Processor Java Library
 CDSS Time Series Processor Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2019 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Time Series Processor Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
+CDSS Time Series Processor Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS Time Series Processor Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
@@ -710,7 +710,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
     String LEZeroLogValue = parameters.getValue("LEZeroLogValue");
 	String AnalysisStart = parameters.getValue ( "AnalysisStart" );
 	String AnalysisEnd = parameters.getValue ( "AnalysisEnd" );
-	Integer MinimumDataCount_int = new Integer(10); // default
+	Integer MinimumDataCount_int = Integer.valueOf(10); // Default.
 	String MinimumDataCount = parameters.getValue ( "MinimumDataCount" );
 	if ( (MinimumDataCount != null) && !MinimumDataCount.equals("") ) {
 	    MinimumDataCount_int = Integer.parseInt(MinimumDataCount);
