@@ -4,7 +4,7 @@
 
 CDSS Time Series Processor Java Library
 CDSS Time Series Processor Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2024 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Time Series Processor Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -450,12 +450,12 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
 	String AllowMissingCount = parameters.getValue ( "AllowMissingCount" );
 	Integer AllowMissingCount_Integer = null;
     if ( (AllowMissingCount != null) && StringUtil.isInteger(AllowMissingCount) ) {
-        AllowMissingCount_Integer = new Integer(AllowMissingCount);
+        AllowMissingCount_Integer = Integer.valueOf(AllowMissingCount);
     }
     String MinimumSampleSize = parameters.getValue ( "MinimumSampleSize" );
     Integer MinimumSampleSize_Integer = null;
     if ( (MinimumSampleSize != null) && StringUtil.isInteger(MinimumSampleSize) ) {
-        MinimumSampleSize_Integer = new Integer(MinimumSampleSize);
+        MinimumSampleSize_Integer = Integer.valueOf(MinimumSampleSize);
     }
 	String AnalysisStart = parameters.getValue ( "AnalysisStart" );
 	String AnalysisEnd = parameters.getValue ( "AnalysisEnd" );
