@@ -4,7 +4,7 @@
 
 CDSS Time Series Processor Java Library
 CDSS Time Series Processor Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 1994-2024 Colorado Department of Natural Resources
+Copyright (C) 1994-2025 Colorado Department of Natural Resources
 
 CDSS Time Series Processor Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -212,7 +212,7 @@ private TS getTimeSeriesToProcess ( int its, int[] tspos, String command_tag, in
     String routine = getClass().getSimpleName() + ".getTimeSeriesToProcess";
     TS ts = null;
     PropList request_params = new PropList ( "" );
-    request_params.setUsingObject ( "Index", new Integer(tspos[its]) );
+    request_params.setUsingObject ( "Index", Integer.valueOf(tspos[its]) );
     CommandProcessorRequestResultsBean bean = null;
     CommandProcessor processor = getCommandProcessor();
     String message;
@@ -367,7 +367,7 @@ throws InvalidCommandParameterException, CommandWarningException, CommandExcepti
 	CommandProcessor processor = getCommandProcessor();
 
     CommandStatus status = getCommandStatus();
-    Boolean clearStatus = new Boolean(true); // default
+    Boolean clearStatus = Boolean.TRUE; // Default.
     try {
     	Object o = processor.getPropContents("CommandsShouldClearRunStatus");
     	if ( o != null ) {
